# DistInf

./: .gitignore  README.md  THEORY.md  model.py  pyproject.toml  requirements.txt  run_accumulate.sh  run_all_topk.sh  run_babilong_finch.sh  run_recursive.sh  run_single_sample.py  run_star_attention_inference.py  run_topk_single_sample.py  tidal_attention.py  topk_attention.py  train_dynamic_params.py
bmrt/: __init__.py  accumulator.py  lsh_sampler.py  patch_fa.py  processor.py  utils.py
bmrt/selectors/: base.py  eager_exact.py  hybrid.py  lsh_core.py
old/: model.py  run_single_sample.py  run_star_attention_inference.py
old/star_attention/star_flash_attn/: star_flash_attn_varlen.pystar_flash_attn_varlen.py
src/: enable_tidal.py  utils.py
src/models/: llama_tidaldecoding.py
src/tidal_build/: modify_llama_lim.py
star_attention/: modeling_flash_attention_utils.py  modeling_llama.py
star_attention/star_flash_attn/: star_flash_attn.py  utils.py
tests/: babilong_finch.py  babilong_snapkv.py  finch_vt.py  pred.py  pred_snapkv.py  result.py  test_config.py  test_hybrid_selector.py  test_lsh_logic.py  test_lsh_magicpig.py  test_recursive_numeric.py  test_wrapper.py
